src/test/ui/parser/pat-tuple-4.stderr
error: `..X` range patterns are not supported
  --> $DIR/pat-tuple-4.rs:5:10
   |
LL |         (.. PAT) => {}
   |          ^^^^^^ help: try using the minimum value for the type: `MIN..PAT`

error[E0308]: mismatched types
  --> $DIR/pat-tuple-4.rs:10:30
   |
LL | const RECOVERY_WITNESS: () = 0;
   |                              ^ expected (), found integer
   |
   = note: expected type `()`
              found type `{integer}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
